<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_bg_pink"
    android:orientation="vertical"

    tools:context="easy.dating.foryou.activities.MainScreenActivity">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/view1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@id/button_create_account"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"

        android:background="#c0c0c0" />

    <Button
        android:id="@+id/button_create_account"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout_sign_in"


        android:text="@string/create_account"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/linearLayout_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white" />


        <Button


            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/sign_in"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white" />
    </LinearLayout>


</RelativeLayout>