<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/choose_age_bg"
        tools:context=".ChooseAgeActivity">

    <ImageView
            android:src="@drawable/next_button"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="69dp"
            android:layout_height="69dp"
            android:id="@+id/to_web_view_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/ages_radio_group" android:layout_marginRight="24dp"
            android:layout_marginLeft="8dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="205dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.118" android:id="@+id/ages_radio_group">

        <RadioButton
            android:id="@+id/twenty_five_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#000000"
            android:checked="true"
            android:fontFamily="@font/helvetica_neue_cyr_bold"
            android:paddingLeft="16dp"
            android:text="@string/less_twenty_five"
            android:textColor="@android:color/black"
            android:textSize="36sp" />

        <RadioButton
            android:id="@+id/five_nine_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#000000"
            android:fontFamily="@font/helvetica_neue_cyr_bold"
            android:paddingLeft="16dp"
            android:text="@string/twenty_five_nine"
            android:textColor="@android:color/black"
            android:textSize="36sp" />

        <RadioButton
            android:id="@+id/thirty_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#000000"
            android:fontFamily="@font/helvetica_neue_cyr_bold"
            android:paddingLeft="16dp"
            android:text="@string/more_thirty"
            android:textColor="@android:color/black"
            android:textSize="36sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/helvetica_neue_cyr_bold"
        android:text="@string/your_age"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#fa4f95"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/heart" />
</androidx.constraintlayout.widget.ConstraintLayout>